# automotive-absbrake-ecu-cpp

./: .gitignore  README.md  SensorDinamicMemory.cpp  deteccion-hardware-autosar-misra.cpp  main.cpp  sensor_abs.cpp
includes/: algoritmo_abs.h  isensor_velocidad.h  ring_buffer.h  sensor_abs.h
tests/: CMakeLists.txt  test_abs.cpp
